# TechTheTurf-LowLevel

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  \  cmake_install.cmake  compile_commands.json  compile_flags.txt  incremental_encoder.c  incremental_encoder.h  ll.sublime-project  main.c  motor.c  motor.h  pami.sublime-project  pami.sublime-workspace  please_dont_crash.sh  servo.c  servo.h
.cache/clangd/index/: config_autogen.h.49D63C0C9B82026E.idx  incremental_encoder.c.3327CDCEA20B0C06.idx  incremental_encoder.h.234114B1D4786864.idx  main.c.21D629AD5B2889D8.idx  motor.c.F117436EC446F82F.idx  motor.h.F6513F5C7C1FEF64.idx  servo.c.4C217EEA8311571E.idx  servo.h.4926DE13FC3DA4E3.idx  types.h.C731D789D5C2813C.idx  version.h.D81E7AE49EE2AB67.idx
bg/: compile_commands.json  platformio.ini
bg/include/: comm_bg.hpp
bg/src/: comm_bg.cpp  main.cpp
elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
include/: accel_limiter.hpp  comm.hpp  comm_bg.hpp  control_loop.hpp  controller.hpp  driver.hpp  driver_base.hpp  driver_bg.hpp  encoder.hpp  odometry.hpp  pid.hpp  pins.hpp  robot.hpp  telemetry.hpp
include/action/: arm.hpp  comm_action.hpp  dynamixel_manager.hpp  dynamixel_motor.hpp  dynamixel_xl430.hpp  elevator.hpp  endstop.hpp  hcsr04.hpp  pump.hpp  stepper_driver.hpp
include/asserv/: comm_asserv.hpp  comm_bg.hpp  comm_odrive.hpp  control_loop.hpp  controller.hpp  driver.hpp  driver_base.hpp  driver_bg.hpp  driver_odrive.hpp  effects.hpp  odrive_enums.hpp  pid.hpp  pll.hpp  speed_profile.hpp
include/dynamixel_sdk/: packet_handler.h  port_handler.h  port_handler_pico.h
include/shared/: comm.hpp  neopixel_connect.h  robot.hpp  telemetry.hpp
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/boot_stage2/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_flash/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_resets/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_rtc/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_spi/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_sync/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_timer/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_uart/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_vreg/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_watchdog/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_xosc/: Makefile  (+1 more)
pico-sdk/tools/: Makefile  cmake_install.cmake
pio/: quadrature_encoder.pio
src/: .incremental_encoder.c.swp  .incremental_encoder.h.swp  .main.c.swp  .motor.c.swp  .servo.c.swp  .servo.h.swp  accel_limiter.cpp  comm.cpp  comm_bg.cpp  control_loop.cpp  controller.cpp  driver.cpp  driver_bg.cpp  encoder.cpp  incremental_encoder.c  incremental_encoder.h  main.c  main.cpp  motor.c  motor.h  odometry.cpp  pid.cpp  pll.cpp  servo.c  servo.h  types.h
src/action/: arm.cpp  comm_action.cpp  dynamixel_manager.cpp  dynamixel_motor.cpp  dynamixel_xl430.cpp  elevator.cpp  endstop.cpp  hcsr04.cpp  main.cpp  pamigami.cpp  pump.cpp  stepper_driver.cpp
src/asserv/: accel_limiter.cpp  comm_asserv.cpp  comm_bg.cpp  comm_odrive.cpp  control_loop.cpp  controller.cpp  driver.cpp  driver_bg.cpp  driver_odrive.cpp  effects.cpp  encoder.cpp  main.cpp  odometry.cpp  pid.cpp  pll.cpp  speed_profile.cpp
src/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  group_fast_bulk_read.cpp  group_fast_sync_read.cpp  group_handler.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  port_handler_pico.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
src/shared/: comm.cpp  neopixel_connect.cpp
tools/: drive.py  pi_comm.py
(+71 files in other folders)
